# Pipeline-mesoSPIM

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  Thresholding_and_Remove_artifacts_and_segmentation.ipynb  brainreg_atlas_ref.html  datajoint_tables.html  devs-requirements.txt  genindex.html  objects.inv  parameters_brainreg.html  pipeline.html  pyproject.toml  requirements.txt  search.html  searchindex.js  welcome.html
.github/workflows/: build_docs.yml
OLD_meso_spim/: Dockerfile.client  Dockerfile.server  README.md  TEST_populate_draft.py  app.py  frozen_requirements.txt  login.py  plot_ERD_mesospim.ipynb  populate.py
OLD_meso_spim/Brain_registration/: rois_brainreg.py  run_brainreg.py
OLD_meso_spim/cellseg3dmodule/: .gitignore  config.py  evaluate_instance.py  evaluate_semantic.py  inference_config.json  matching.py  post_processing.py  predict.py  trainer.py  utils.py
OLD_meso_spim/docs/: _config.yml  _toc.yml  brainreg_atlas_ref.ipynb  pipeline.md  plot_ERD_mesospim.ipynb  reqs.md  todo.md  welcome.md
OLD_meso_spim/schema/: brainreg_config.json  brainreg_config.py  path_config.json  spim.py  user.py
OLD_meso_spim/scripts/: atlas_resizer.py  crop_regions.py  (+5 more)
Pipeline/: TEST_populate_draft.py  TEST_populate_draft_chickadee.py  determine_ids.py  login.py  plot_schema.ipynb  plot_schema.py  segmentation_viewer.py  showcase_results.ipynb  test.py  user_interface.py
_sources/: pipeline.md
docs/: _config.yml  _toc.yml  brainreg_atlas_ref.ipynb  datajoint_tables.md  parameters_brainreg.md  pipeline.md  welcome.md
notebooks/: showcase_results.ipynb
test_scripts/: cellseg_utils.py  inference.py
(+44 files in other folders)
